@@ -15,6 +15,7 @@
 Inherit     = QCommonStyle
 Type        = Core
 New         = 
+VersionUpto = 0x040900
 </CLASS>
 
 <CODE>
